# CLIck-Me-Codex1

./: README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: USAGE.md
src/intro_cli/: cli.py  config.py  controllers.py  services.py
tests/: test_cli.py
